# Tengen

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docker/: docker-compose.yml
runbooks/aws/: root_account_usage.yaml  unauthorized_api_call.yaml
runbooks/azure/: privilege_escalation.yaml  suspicious_signin.yaml  unauthorized_access.yaml
runbooks/edr/: credential_dumping.yaml  lateral_movement.yaml  malware_detection.yaml
runbooks/gcp/: admin_activity.yaml  data_access.yaml
runbooks/k8s/: anomalous_exec.yaml  privileged_container.yaml  secrets_access.yaml
runbooks/network/: ddos_inbound.yaml  firewall_block_surge.yaml
tengen/: config.py  dashboard_main.py  forwarder_main.py  router_main.py  tui_main.py
tengen/agents/: azure_runbook.py  cloudtrail_runbook.py  containment.py  edr_runbook.py  enrichment_agent.py  forwarder.py  gcp_audit_runbook.py  k8s_runbook.py  normalizer.py  orchestrator.py  query.py  router.py  triage.py
tengen/consumers/: __init__.py  base.py  kafka_consumer.py  pubsub_consumer.py  sqs_consumer.py  universal_consumer.py
tengen/dashboard/: app.py  metrics_consumer.py  metrics_store.py  rabbitmq_api.py  routes_reader.py
tengen/enrichers/: __init__.py  cache.py  context.py  protocol.py  runner.py
tengen/forwarder/: __init__.py  dlq_forwarder.py  enriched_forwarder.py  splunk_client.py
tengen/mcp_servers/: azure_activity_server.py  cloudtrail_server.py  crowdstrike_server.py  gcp_audit_server.py  k8s_audit_server.py
tengen/metrics/: __init__.py  emitter.py
tengen/models/: __init__.py  alert.py  enriched_alert.py  finding.py  incident.py  normalized_event.py  runbook.py
tengen/queue/: __init__.py  queues.py  rabbitmq.py  rabbitmq_consumer.py
tengen/routing/: __init__.py  registry.py  router.py
tengen/runbooks/: base.py
tengen/tools/: alert_parser.py  enrichment.py  forwarder_tools.py  runbook_loader.py  (+1 more)
tests/: conftest.py  test_cloudtrail_runbook.py  test_containment.py  test_enrichment.py  test_forwarder.py  test_gcp_audit_runbook.py  test_models.py  test_normalizers.py  test_orchestrator.py  test_router.py  test_tools.py  test_triage.py
(+40 files in other folders)
