[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tengen"
version = "0.1.0"
description = "Google ADK-based SOAR skeleton for cloud security automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=0.5.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "boto3>=1.34",
    "google-cloud-logging>=3.10",
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
