[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tengen"
version = "0.2.0"
description = "Agentic security harness: multi-cloud SOAR with LLM agents, durable queuing, and real containment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core LLM / agentic framework
    "google-adk>=0.5.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",

    # AWS
    "boto3>=1.34",

    # GCP
    "google-cloud-logging>=3.10",
    "google-cloud-pubsub>=2.21",
    "google-auth>=2.29",

    # Azure
    "azure-identity>=1.17",
    "azure-mgmt-monitor>=6.0",

    # Kubernetes
    "kubernetes>=29.0",

    # HTTP
    "httpx>=0.27",

    # MCP servers
    "mcp>=1.0",

    # RabbitMQ
    "pika>=1.3",

    # Kafka
    "confluent-kafka>=2.3",

    # Dashboard
    "fastapi>=0.111",
    "uvicorn>=0.30",

    # General utilities
    "requests>=2.31",

    # TUI
    "textual>=0.80",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "httpx>=0.27",
]

[project.scripts]
tengen-router = "tengen.router_main:main"
tengen-forwarder = "tengen.forwarder_main:main"
tengen-dashboard = "tengen.dashboard_main:main"
tengen-ingest = "tengen.consumers.universal_consumer:main"
tengen-tui = "tengen.tui_main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
